--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+  buildConfiguration: Release
+
 jobs:
   build:
 
@@ -23,6 +26,12 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --configuration ${{ env.buildConfiguration }} --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --configuration ${{ env.buildConfiguration }} --no-build --verbosity normal
+    - name: Publish dotnet app
+      run: dotnet publish  --configuration ${{ env.buildConfiguration }} --output ${{ github.workspace }}
+    - name: Publish artifact
+      uses: actions/upload-artifact@v3
+      with:
+        path: ${{ github.workspace }}
